# android-benchmark

./: CMakeLists.txt  adb_run_on_device.sh  build_full.sh  build_lite.sh
src/: CMakeLists.txt  test.cpp
src/utils/: benchmark.h
